07-deploying-demo-application/api-node/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node
  namespace: demo-app
  labels:
    app: api-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
        - name: api-node
          image: sidpalas/devops-directive-docker-course-api-node:foobarbaz
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
